// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar renders with border 1`] = `
<View
  accessibilityLabel=""
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "white",
        "borderColor": "#C7CDD1",
        "borderWidth": 0.5,
        "justifyContent": "center",
        "overflow": "hidden",
      },
      Object {
        "borderRadius": 20,
        "height": 40,
        "width": 40,
      },
    ]
  }
>
  <Text
    accessible={false}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "color": "#73818C",
          "fontWeight": "600",
        },
        Object {
          "fontSize": 18,
        },
      ]
    }
  >
    LL
  </Text>
</View>
`;

exports[`Avatar renders with image 1`] = `
<View
  accessibilityLabel=""
  style={
    Array [
      Object {
        "overflow": "hidden",
      },
      Object {
        "height": 40,
        "width": 40,
      },
      Object {
        "borderRadius": 20,
      },
      Object {
        "backgroundColor": "#F5F5F5",
      },
    ]
  }
>
  <Image
    source={
      Object {
        "uri": "http://www.fillmurray.com/200/300",
      }
    }
    style={
      Object {
        "height": 40,
        "width": 40,
      }
    }
  />
</View>
`;

exports[`Avatar renders without default canvas avatar 1`] = `
<View
  accessibilityLabel=""
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "white",
        "borderColor": "#C7CDD1",
        "borderWidth": 0.5,
        "justifyContent": "center",
        "overflow": "hidden",
      },
      Object {
        "borderRadius": 20,
        "height": 40,
        "width": 40,
      },
    ]
  }
>
  <Text
    accessible={false}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "color": "#73818C",
          "fontWeight": "600",
        },
        Object {
          "fontSize": 18,
        },
      ]
    }
  >
    LL
  </Text>
</View>
`;

exports[`Avatar renders without image 1`] = `
<View
  accessibilityLabel=""
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "white",
        "borderColor": "#C7CDD1",
        "borderWidth": 0.5,
        "justifyContent": "center",
        "overflow": "hidden",
      },
      Object {
        "borderRadius": 20,
        "height": 40,
        "width": 40,
      },
    ]
  }
>
  <Text
    accessible={false}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "color": "#73818C",
          "fontWeight": "600",
        },
        Object {
          "fontSize": 18,
        },
      ]
    }
  >
    LL
  </Text>
</View>
`;

exports[`Avatar renders without image but it has a funky name 1`] = `
<View
  accessibilityLabel=""
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "white",
        "borderColor": "#C7CDD1",
        "borderWidth": 0.5,
        "justifyContent": "center",
        "overflow": "hidden",
      },
      Object {
        "borderRadius": 20,
        "height": 40,
        "width": 40,
      },
    ]
  }
>
  <Text
    accessible={false}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "color": "#73818C",
          "fontWeight": "600",
        },
        Object {
          "fontSize": 18,
        },
      ]
    }
  >
    
  </Text>
</View>
`;
